# A-Special-YOLOv5s6.0-Deploy-TensorRT

./: .gitmodules  README.md
YoloLayer_TRT_v6.0/: CMakeLists.txt  cuda_utils.h  yololayer.cu  yololayer.h
script/: add_custom_yolo_op.py
yolov5-6.0/: export.py
yolov5-6.0/models/: yolo.py
yolov5s-6.0-tensorrt/: CMakeLists.txt  cuda_utils.h  logging.h  test.cpp  yololayer.cu  yololayer.h  yolov5.cpp  yolov5.cpp.bak
